--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p id="greeting">Loaging ...</p>
+    <script src="scripts/phaser.js"></script>
     <script src="bundle.js"></script>
 </body>
 </html>
