--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -5,7 +5,7 @@
     <title>Instant Rockets</title>
 </head>
 <body>
-    <script src="scripts/phaser.js"></script>
+    <script src="lib/phaser/phaser.js"></script>
     <script src="bundle.js"></script>
 </body>
 </html>
