Initialize fb instant games.

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -5,6 +5,7 @@
     <title>Instant Rockets</title>
 </head>
 <body>
+    <script src="https://connect.facebook.net/en_US/fbinstant.4.1.js"></script>
     <script src="bundle.js"></script>
 </body>
 </html>
