--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Instant Rockets</title>
 </head>
-<body>
+<body style="margin:0px;">
     <script src="https://connect.facebook.net/en_US/fbinstant.6.0.js"></script>
     <script src="bundle.js"></script>
 </body>
